<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pomodoro</string>
    <string name="app_description">Productivity Timer</string>
    <string name="app_version">v1.2</string>
    
    <string name="about">About</string>
    <string name="about_title">About Pomodoro</string>
    <string name="about_text"><b>Original Source by</b>\n<u>M. Wiggins</u>\n\n
    <b>Source code available</b>\n<u>http://github.com/lithium/Pomodoro</u>\n\n
    Published by Hlidskialf Software\n\n
    No warranty of any kind provided.
    </string>
    
    <string name="alert_title">Pomodoro Alert!</string>


    <string name="alarm_message_tomato">Your tomato is up! Take a break!</string>
    <string name="alarm_message_rest">Break is over, get back to work!</string>

    <string name="start_tomato">Start working</string>
    <string name="start_rest"  >Start resting</string>
    <string name="stop_working">Stop working</string>
    <string name="reset_tomato">Reset tomatoes</string>

    <string name="silence">Silence alarm</string>

    <string name="status_none"></string>
    <string name="status_tomato">Working</string>
    <string name="status_rest">Break</string>




    <string name="preferences">Preferences</string>
    <string name="pref_pomodoro_cat">Pomodoro Preferences</string>
    <string name="pref_tomato_duration_title">Tomato Duration</string>
    <string name="pref_tomato_duration_summary">Minutes tomato lasts =</string>
    <string name="pref_rest_duration_title">Rest Duration</string>
    <string name="pref_rest_duration_summary">Minutes rest lasts =</string>
    <string name="pref_notification_timer_title">Notification Timer</string>
    <string name="pref_notification_timer_summary">Show timer in notification bar</string>

    <string name="pref_tomato_cat">Tomato Ringtone</string>
    <string name="pref_tomato_ringtone_title">Ringtone</string>
    <string name="pref_tomato_ringtone_summary">Tone to play when tomato done</string>
    <string name="pref_tomato_vibrate_title">Vibrate</string>
    <string name="pref_tomato_vibrate_summary">Vibrate when tomato done</string>
    <string name="pref_tomato_volume_title">Volume</string>
    <string name="pref_tomato_volume_summary">Volume of ringtone = </string>
    <string name="pref_tomato_delay_title">Delay</string>
    <string name="pref_tomato_delay_summary">Pause between ringtones = </string>

    <string name="pref_rest_cat">Rest Ringtone</string>
    <string name="pref_rest_ringtone_title">Ringtone</string>
    <string name="pref_rest_ringtone_summary">Tone to play when rest is over</string>
    <string name="pref_rest_vibrate_title">Vibrate</string>
    <string name="pref_rest_vibrate_summary">Vibrate when rest is over</string>
    <string name="pref_rest_volume_title">Volume</string>
    <string name="pref_rest_volume_summary">Ringtone volume = </string>
    <string name="pref_rest_delay_title">Delay</string>
    <string name="pref_rest_delay_summary">Milliseconds between ringtones = </string>
    <string name="hey_">Hey!</string>
</resources>
